--- a/XwingTurnRunnerEmpty/_Imports.razor
+++ b/XwingTurnRunnerEmpty/_Imports.razor
@@ -1,5 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using XwingTurnRunner
-@using MediatR
+@using XwingTurnRunnerEmpty
