--- a/XwingTurnRunner/Pages/Index.razor
+++ b/XwingTurnRunner/Pages/Index.razor
@@ -1,8 +1,8 @@
 ﻿@page "/"
-@inject NavigationManager Nav;
+@inject NavigationManager Nav
+@inject IBus Bus
 
 <button @onclick="StartNewGame">Start New Game</button>
-
 
 @code
 {
