Preparing to make dialogue component.

--- a/XwingTurnRunner/App.razor
+++ b/XwingTurnRunner/App.razor
@@ -1,5 +1,6 @@
-﻿@using XwingTurnRunner.XWingStateMachine.Phases
-@using XwingTurnRunner.Messages
+﻿@using XwingTurnRunner.Messages
+@using XwingTurnRunner.Game
+@using XwingTurnRunner.Game.Phases
 @inject IBus Bus
 @inject NavigationManager Nav
 
