--- a/XwingTurnRunner/Pages/StartGame.razor
+++ b/XwingTurnRunner/Pages/StartGame.razor
@@ -1,5 +1,6 @@
 ﻿@page "/start-game"
 @using XwingTurnRunner.Messages
+@using XwingTurnRunner.Game
 @inject IGameFactory GameFactory
 @inject IBus Bus; // TODO: This seems lke a hack
 
