Refactored a bit. Going to continue to rework this a little bit, but making progress.

--- a/XwingTurnRunner/App.razor
+++ b/XwingTurnRunner/App.razor
@@ -1,10 +1,4 @@
-﻿@using XwingTurnRunner.Messages
-@using XwingTurnRunner.Game
-@using XwingTurnRunner.Game.Phases
-@inject IBus Bus
-@inject NavigationManager Nav
-
-<Router AppAssembly="@typeof(App).Assembly">
+﻿<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
@@ -16,24 +10,3 @@
         </LayoutView>
     </NotFound>
 </Router>
-
-@code
-{
-    private IGame? game;
-
-    protected override void OnInitialized()
-    {
-        Bus.Subscribe<NewGameStartedEvent>(x => SubscribeToGame(x.Game));
-    }
-
-    private void SubscribeToGame(IGame newGame)
-    {
-        game = newGame;
-        // TODO: Make a SAGA?
-        game.Bus.Register<SelectInitiativeRequest, Player>(x =>
-        {
-            Nav.NavigateTo("/choose-initiative");
-            return x.SelectingPlayer;
-        });
-    }
-}
