--- a/XwingTurnRunner/_Imports.razor
+++ b/XwingTurnRunner/_Imports.razor
@@ -3,3 +3,7 @@
 @using Microsoft.JSInterop
 @using XwingTurnRunner
 @using XwingTurnRunner.Infrastructure
+@using XwingTurnRunner.Game
+@using XwingTurnRunner.Components
+
+@inject IBus Bus
